examples/manifests/oauth2-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      volumes:
        - name: nginx
          configMap:
            name: oauth2-proxy-nginx
      containers:
        - name: nginx
          image: nginx:1.19.3-alpine
          resources:
            limits:
              cpu: 0.2
              memory: 512Mi
          ports:
            - name: nginx
              containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.2
          args:
            - --provider=github
            - --email-domain=*
            - --github-org=<no value>
            - --github-user=<no value>
            - --upstream=file:///dev/null
            - --upstream=http://localhost/redirect/
            - --http-address=0.0.0.0:4180
            - --cookie-domain=.mycompany.com
            - --footer=-
          ports:
            - containerPort: 4180
              protocol: TCP
              name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: infrastructure
spec:
  ports:
    - name: http
      protocol: TCP
      targetPort: http
      port: 80
  selector:
    k8s-app: oauth2-proxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: oauth2-proxy
  namespace: infrastructure
spec:
  rules:
    - host: "auth.mycompany.com"
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: http
            path: /
